[gd_scene load_steps=21 format=3 uid="uid://bvpim07i7se1g"]

[ext_resource type="Script" path="res://Scenes/UI/LevelSelect.gd" id="1_hmbbl"]
[ext_resource type="Texture2D" uid="uid://dtgk1p2n8m7jt" path="res://Art/Menus/BG_Box.png" id="2_om6rk"]
[ext_resource type="FontFile" uid="uid://dwise6tlxxmb" path="res://Fonts/Nunito/static/Nunito-Medium.ttf" id="3_uutcg"]
[ext_resource type="Texture2D" uid="uid://dgj32h8kkmi8a" path="res://Art/Menus/UI_Back_Button.png" id="4_t206h"]
[ext_resource type="Theme" uid="uid://ln2ffi74l3eg" path="res://Resources/UITheme.tres" id="5_djahh"]
[ext_resource type="StyleBox" uid="uid://cdqlbxa148orj" path="res://Resources/ButtonFocus.tres" id="6_u67c6"]
[ext_resource type="Texture2D" uid="uid://cnb0v6ukb3edh" path="res://Art/Menus/UI_1Button.png" id="6_wptct"]
[ext_resource type="Texture2D" uid="uid://b3situl82j18i" path="res://Art/Menus/UI_2Button.png" id="7_4c16x"]
[ext_resource type="Texture2D" uid="uid://b5shsgq7ltach" path="res://Art/Menus/LockIcon.png" id="8_cj47e"]
[ext_resource type="Texture2D" uid="uid://1rmxt65vgskl" path="res://Art/Menus/UI_3Button.png" id="9_u0ksp"]
[ext_resource type="Texture2D" uid="uid://c5mqxi1nledwx" path="res://Art/Menus/UI_4Button.png" id="10_3j7g1"]
[ext_resource type="Texture2D" uid="uid://cdejbpm10k31g" path="res://Art/Menus/UI_5Button.png" id="11_0feon"]
[ext_resource type="Texture2D" uid="uid://bait04mgixe36" path="res://Art/Menus/UI_6Button.png" id="12_17icu"]
[ext_resource type="Texture2D" uid="uid://b0htklssgl4t0" path="res://Art/Menus/UI_7Button.png" id="13_x08gd"]
[ext_resource type="Texture2D" uid="uid://g7j8awtgc4c3" path="res://Art/Menus/UI_8Button.png" id="14_gj1f7"]
[ext_resource type="Texture2D" uid="uid://bamp7ynus6uq0" path="res://Art/Menus/UI_9Button.png" id="15_bqwat"]
[ext_resource type="Texture2D" uid="uid://b3qmyhovj5ti7" path="res://Art/Menus/UI_10Button.png" id="16_5r7dn"]
[ext_resource type="Texture2D" uid="uid://r48v1hpfn0fo" path="res://Art/Menus/UI_11Button.png" id="17_4cx8h"]
[ext_resource type="Texture2D" uid="uid://c5540sv32yiay" path="res://Art/Menus/UI_12Button.png" id="18_e4uqk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_or8un"]
bg_color = Color(0, 0, 0, 0.541176)

[node name="LevelSelect" type="Control" node_paths=PackedStringArray("FocusButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hmbbl")
FocusButton = NodePath("ButtonBack")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.882353, 0.760784, 0.643137, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_om6rk")

[node name="SelectYourLevel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 894.0
offset_top = 153.0
offset_right = -344.0
offset_bottom = -790.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.847059, 0.623529, 0.419608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_uutcg")
theme_override_font_sizes/font_size = 80
text = "Choose a level!"
horizontal_alignment = 1

[node name="ButtonBack" type="Button" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 55.0
offset_right = 568.0
offset_bottom = 269.0
theme = ExtResource("5_djahh")

[node name="Texture" type="TextureRect" parent="ButtonBack"]
layout_mode = 0
offset_left = -117.0
offset_top = -171.0
offset_right = 1931.0
offset_bottom = 1877.0
scale = Vector2(0.3, 0.3)
theme = ExtResource("5_djahh")
texture = ExtResource("4_t206h")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
offset_left = 254.0
offset_top = 442.0
offset_right = 1954.0
offset_bottom = 982.0
scale = Vector2(0.824263, 0.824263)
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 6

[node name="Button1" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_styles/focus = ExtResource("6_u67c6")
text = "
"

[node name="Texture" type="TextureRect" parent="GridContainer/Button1"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("6_wptct")

[node name="Button2" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "2"

[node name="Texture2" type="TextureRect" parent="GridContainer/Button2"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("7_4c16x")

[node name="Fade1" type="Panel" parent="GridContainer/Button2/Texture2"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button2/Texture2"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button3" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "3"

[node name="Texture3" type="TextureRect" parent="GridContainer/Button3"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("9_u0ksp")

[node name="Fade2" type="Panel" parent="GridContainer/Button3/Texture3"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button3/Texture3"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button4" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "4"

[node name="Texture4" type="TextureRect" parent="GridContainer/Button4"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("10_3j7g1")

[node name="Fade3" type="Panel" parent="GridContainer/Button4/Texture4"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button4/Texture4"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button5" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "5"

[node name="Texture5" type="TextureRect" parent="GridContainer/Button5"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("11_0feon")

[node name="Fade4" type="Panel" parent="GridContainer/Button5/Texture5"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button5/Texture5"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button6" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "6"

[node name="Texture6" type="TextureRect" parent="GridContainer/Button6"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("12_17icu")

[node name="Fade5" type="Panel" parent="GridContainer/Button6/Texture6"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button6/Texture6"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button7" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "7"

[node name="Texture7" type="TextureRect" parent="GridContainer/Button7"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("13_x08gd")

[node name="Fade6" type="Panel" parent="GridContainer/Button7/Texture7"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button7/Texture7"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button8" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "8
"

[node name="Texture8" type="TextureRect" parent="GridContainer/Button8"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("14_gj1f7")

[node name="Fade7" type="Panel" parent="GridContainer/Button8/Texture8"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button8/Texture8"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button9" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "9
"

[node name="Texture9" type="TextureRect" parent="GridContainer/Button9"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("15_bqwat")

[node name="Fade8" type="Panel" parent="GridContainer/Button9/Texture9"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button9/Texture9"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button10" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "10"

[node name="Texture10" type="TextureRect" parent="GridContainer/Button10"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("16_5r7dn")

[node name="Fade9" type="Panel" parent="GridContainer/Button10/Texture10"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button10/Texture10"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button11" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "11"

[node name="Texture11" type="TextureRect" parent="GridContainer/Button11"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("17_4cx8h")

[node name="Fade10" type="Panel" parent="GridContainer/Button11/Texture11"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button11/Texture11"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="Button12" type="Button" parent="GridContainer"]
z_index = 3
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme = ExtResource("5_djahh")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = ExtResource("6_u67c6")
text = "12"

[node name="Texture12" type="TextureRect" parent="GridContainer/Button12"]
layout_mode = 0
offset_left = -170.0
offset_top = -170.0
offset_right = 1878.0
offset_bottom = 1878.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("18_e4uqk")

[node name="Fade11" type="Panel" parent="GridContainer/Button12/Texture12"]
layout_mode = 0
offset_left = 590.0
offset_top = 590.0
offset_right = 1460.0
offset_bottom = 1460.0
theme_override_styles/panel = SubResource("StyleBoxFlat_or8un")

[node name="Lock" type="TextureRect" parent="GridContainer/Button12/Texture12"]
layout_mode = 0
offset_left = 617.241
offset_top = 617.242
offset_right = 2665.24
offset_bottom = 2665.24
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_cj47e")

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 372.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ButtonBack" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="GridContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="GridContainer/Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="GridContainer/Button11" to="." method="_on_button_11_pressed"]
[connection signal="pressed" from="GridContainer/Button12" to="." method="_on_button_12_pressed"]
